--- a/src/app/components/collection/collection.component.html
+++ b/src/app/components/collection/collection.component.html
@@ -3,16 +3,17 @@
     <ion-item>
       <ion-select [value]="language" label="Default label" placeholder="Language"
                   [formControl]="language">
-        <ion-select-option *ngFor="let collection of collections$ | async"
-                           [value]="collection.language">{{languageDisplayNames[collection.language]}}</ion-select-option>
+        <ion-select-option
+          *ngFor="let collection of (viewModel$ | async)?.collections"
+          [value]="collection.language">{{languageDisplayNames[collection.language]}}</ion-select-option>
       </ion-select>
     </ion-item>
 
-    <ion-button (click)="addCollection()">
+    <ion-button (click)="addDictionaryModal()">
       Add collection
     </ion-button>
 
-    <ion-card *ngFor="let dictionary of dictionaries$ | async">
+    <ion-card *ngFor="let dictionary of language.getRawValue() | dictionary: viewModel$  | async">
       <ion-card-header>
         <ion-card-title>{{dictionary.name}}</ion-card-title>
         <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
@@ -26,6 +27,7 @@
     </ion-card>
   </ion-list>
 
+  <!--  <ion-button (click)="addDictionary()">ADD</ion-button>-->
   <ion-button (click)="consoleLog()">
     Console log
   </ion-button>
