--- a/src/app/components/collection/new-collection/new-collection-modal/new-collection-modal.component.html
+++ b/src/app/components/collection/new-collection/new-collection-modal/new-collection-modal.component.html
@@ -1,3 +1,8 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Header</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content [formGroup]="form">
   <ion-input label="Name" formControlName="name">
 
