--- a/src/app/components/collection/collection.component.html
+++ b/src/app/components/collection/collection.component.html
@@ -1,3 +1,8 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Header</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
   <ion-list>
     <ion-item>
