--- a/src/app/components/dictionary/dictionary.component.html
+++ b/src/app/components/dictionary/dictionary.component.html
@@ -22,12 +22,22 @@
       </ion-button>
     </ion-item>
 
+    <ion-item>
+      <ion-input [formControl]="typeaheadControl" label="Keresés">
+
+      </ion-input>
+    </ion-item>
+
     <ion-button (click)="addDictionaryModal()">
       Add dictionary
     </ion-button>
 
+    <ion-button (click)="consoleLog()">
+      Console log
+    </ion-button>
+
     <ion-card
-      *ngFor="let dictionary of currentLanguageControl.getRawValue() | findDictionariesByLanguage : viewModel$  | async">
+      *ngFor="let dictionary of filteredDictionaries$  | async">
       <ion-card-header>
         <ion-card-title>{{dictionary.name}}</ion-card-title>
         <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
@@ -40,9 +50,4 @@
       <ion-button (click)="deleteDictionary(dictionary.id)" fill="clear">Törlés</ion-button>
     </ion-card>
   </ion-list>
-
-  <!--  <ion-button (click)="addDictionary()">ADD</ion-button>-->
-  <ion-button (click)="consoleLog()">
-    Console log
-  </ion-button>
 </ion-content>
