--- a/src/app/components/shell/tabs/tabs.page.html
+++ b/src/app/components/shell/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="collection">
       <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Collections</ion-label>
+      <ion-label>Dictionary</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="translate">
@@ -14,6 +14,11 @@
     <ion-tab-button tab="tab3">
       <ion-icon aria-hidden="true" name="square"></ion-icon>
       <ion-label>Tab 3</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab3">
+      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
