--- a/src/app/components/translate/translate.component.html
+++ b/src/app/components/translate/translate.component.html
@@ -26,4 +26,8 @@
     Console log
   </ion-button>
 
+  <ion-item *ngFor="let text of (workbook | findTextsByDictionary: currentDictionaryControl.getRawValue())">
+    {{text.originalText}} - {{text.translatedText}}
+  </ion-item>
+
 </ion-content>
