--- a/src/app/components/shell/tabs/tabs.page.scss
+++ b/src/app/components/shell/tabs/tabs.page.scss
@@ -1,1 +1,25 @@
+ion-tab-bar {
+  --background: transpanent;
+  --color: black;
+  width: 90%;
+  height: 7%;
+  bottom: 10px;
+  position: relative;
+  margin: 0 auto;
+  border-radius: 2rem;
+  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.6);
+  border-top: none;
+}
 
+.tab-selected {
+  color: black;
+}
+
+ion-tab-button {
+  border-radius: 2rem !important;
+
+  &.tab-selected {
+    background-color: transparent;
+    opacity: 0.5;
+  }
+}
