--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -153,7 +153,7 @@
    */
 
   .ios body {
-    --ion-background-color: #9288F8;
+    --ion-background-color: #000000;
     --ion-background-color-rgb: 0, 0, 0;
 
     --ion-text-color: #ffffff;
@@ -229,7 +229,7 @@
 
     --ion-toolbar-background: #1f1f1f;
 
-    --ion-tab-bar-background: #A084E8;
+    --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
   }
