--- a/src/app/components/dictionary/new-dictionary/new-collection-modal/new-dictionary-modal.component.html
+++ b/src/app/components/dictionary/new-dictionary/new-collection-modal/new-dictionary-modal.component.html
@@ -1,17 +1,36 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Header</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content [formGroup]="form">
-  <ion-input label="Name" formControlName="name">
+<ion-content [formGroup]="form" *ngIf="(viewModel$ | async) as workbook">
+    <div class="ion-margin">
+        <h1>
+            Create dictionary
+        </h1>
 
-  </ion-input>
-  <ion-button (click)="confirm()">
-    Add
-  </ion-button>
-  <ion-button (click)="cancel()">
-    Close
-  </ion-button>
+        <ion-list>
+            <ion-item>
+                <ion-input label="Name:" formControlName="name"></ion-input>
+            </ion-item>
+
+            <ion-item>
+                <ion-select label="Language:" formControlName="language">
+                    <ion-select-option
+                            *ngFor="let language of (workbook.languages | sortLanguages)"
+                            [value]="language">{{language.shortName}} - {{language.displayName}}</ion-select-option>
+                </ion-select>
+            </ion-item>
+
+            <!--    todo: popover lehetne mi az a text limit-->
+            <ion-item>
+                <ion-input label="Text limit:" formControlName="textLimit"></ion-input>
+            </ion-item>
+
+            <div class="ion-margin-top flex-container">
+                <ion-button (click)="confirm()">
+                    Create dictionary
+                </ion-button>
+                <ion-button (click)="cancel()" slot="end">
+                    Close
+                </ion-button>
+            </div>
+        </ion-list>
+    </div>
 </ion-content>
 
