--- a/src/app/components/shell/tabs/tabs.page.html
+++ b/src/app/components/shell/tabs/tabs.page.html
@@ -2,22 +2,22 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="collection">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="book"></ion-icon>
       <ion-label>Dictionary</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="translate">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
+      <ion-icon name="swap-horizontal"></ion-icon>
       <ion-label>Translate</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon name="game-controller"></ion-icon>
       <ion-label>Tab 3</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon name="person"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
