--- a/src/app/components/shell/tabs/tabs.page.scss
+++ b/src/app/components/shell/tabs/tabs.page.scss
@@ -1,19 +1,19 @@
 ion-tab-bar {
-  --background: transpanent;
-  --color: black;
-  width: 90%;
-  height: 7%;
-  bottom: 10px;
-  position: relative;
-  margin: 0 auto;
-  border-radius: 2rem;
-  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.6);
+  //--background: #2a2a2a;
+  //--color: #949494;
+  //width: 90%;
+  //height: 7%;
+  //bottom: 10px;
+  //position: relative;
+  //margin: 0 auto;
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: 0px 1px 12px rgba(182, 182, 182, 0.6);
   border-top: none;
 }
 
-.tab-selected {
-  color: black;
-}
+//.tab-selected {
+//  color: black;
+//}
 
 ion-tab-button {
   border-radius: 2rem !important;
