--- a/src/app/components/translate/translate.component.html
+++ b/src/app/components/translate/translate.component.html
@@ -21,7 +21,7 @@
     <!--    </ion-item>-->
 
     <ion-item>
-      <ion-input label="Text" formControlName="originalText"></ion-input>
+      <ion-input label="Text" formControlName="originalText" [clearInput]="true"></ion-input>
     </ion-item>
 
     <ion-item>
