--- a/src/app/components/dictionary/dictionary/dictionary.component.html
+++ b/src/app/components/dictionary/dictionary/dictionary.component.html
@@ -1,29 +1,80 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button (click)="cancel()">Cancel</ion-button>
-    </ion-buttons>
-    <ion-title>Welcome</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-<ion-content class="ion-padding">
+<ng-container [formGroup]="form" *ngIf="(workbook$ | async) as workbook">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-button (click)="cancel()">Cancel</ion-button>
+      </ion-buttons>
+      <ion-title>Welcome</ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="edit()" [strong]="true">{{isComponentReadonly ? "Edit" : "Save"}}</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
 
-  <ion-segment value="default" (ionChange)="segmentChanged($event)">
-    <ion-segment-button value="default">
-      <ion-label>Default</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="segment">
-      <ion-label>Segment</ion-label>
-    </ion-segment-button>
-  </ion-segment>
-
-
-  <div *ngIf="selectedSegment === 'default'">
-    <ion-label>ASD</ion-label>
-  </div>
+    <ion-segment value="default" (ionChange)="segmentChanged($event)">
+      <ion-segment-button value="words">
+        <ion-label>Words</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="properties">
+        <ion-label>Properties</ion-label>
+      </ion-segment-button>
+    </ion-segment>
 
 
-</ion-content>
+    <div class="ion-margin-top" *ngIf="selectedSegment === 'words'">
+      <ion-list>
+
+        <ng-container formArrayName="texts">
+          <ion-item [formArrayName]="i" *ngFor="let word of form.controls.texts.controls; index as i">
+            <ion-textarea formControlName="translatedText" [autoGrow]="true" class="ion-margin ion-text-wrap"
+                          [readonly]="isComponentReadonly"
+                          [value]="word.controls?.['translatedText']?.value"/>
+            <ion-textarea formControlName="originalText" [autoGrow]="true" class="ion-margin ion-text-wrap"
+                          [readonly]="isComponentReadonly"
+                          [value]="word.controls?.['originalText']?.value"/>
+            <ion-button *ngIf="!isComponentReadonly" fill="clear" size="small" color="danger" class="ion-no-margin"
+                        (click)="confirmDelete(i)">
+              <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ng-container>
+
+      </ion-list>
+    </div>
+
+    <div class="ion-margin-top" *ngIf="selectedSegment === 'properties'">
+      <ion-list>
+        <ion-item>
+          <ion-input label="Name:" formControlName="name"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-select label="Language:" formControlName="language" [compareWith]="compareIds">
+            <ion-select-option
+              *ngFor="let language of (workbook.languages | sortLanguages)"
+              [value]="language">{{language.shortName}} - {{language.displayName}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <!--    todo: popover lehetne mi az a text limit-->
+        <ion-item>
+          <ion-input label="Text limit:" formControlName="textLimit"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-textarea label="Description:" formControlName="description" [autoGrow]="true"></ion-textarea>
+        </ion-item>
+
+        <ion-item>
+          <ion-checkbox labelPlacement="start" formControlName="default"
+                        (ionChange)="changeCheckbox($event)">
+            Default:
+          </ion-checkbox>
+        </ion-item>
+      </ion-list>
+    </div>
+
+    <ion-button (click)="log()">LOG</ion-button>
+  </ion-content>
+</ng-container>
