--- a/src/app/components/dictionary/new-dictionary/new-dictionary-modal.component.html
+++ b/src/app/components/dictionary/new-dictionary/new-dictionary-modal.component.html
@@ -23,7 +23,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-textarea label="Description:" formControlName="description"></ion-textarea>
+        <ion-textarea label="Description:" formControlName="description" [autoGrow]="true"></ion-textarea>
       </ion-item>
 
       <ion-item>
