--- a/src/app/components/dictionary/dictionary/dictionary.component.html
+++ b/src/app/components/dictionary/dictionary/dictionary.component.html
@@ -26,11 +26,14 @@
       <ion-list>
 
         <ng-container formArrayName="texts">
-          <ion-item [formArrayName]="i" *ngFor="let word of form.controls.texts.controls; index as i">
-            <ion-textarea formControlName="translatedText" [autoGrow]="true" class="ion-margin ion-text-wrap"
+          <ion-item class="ion-no-padding" [formArrayName]="i"
+                    *ngFor="let word of form.controls.texts.controls; index as i">
+            <ion-textarea formControlName="translatedText" [autoGrow]="true"
+                          class="ion-margin ion-text-wrap ion-no-padding"
                           [readonly]="isComponentReadonly"
                           [value]="word.controls?.['translatedText']?.value"/>
-            <ion-textarea formControlName="originalText" [autoGrow]="true" class="ion-margin ion-text-wrap"
+            <ion-textarea formControlName="originalText" [autoGrow]="true"
+                          class="ion-margin ion-text-wrap ion-no-padding"
                           [readonly]="isComponentReadonly"
                           [value]="word.controls?.['originalText']?.value"/>
             <ion-button *ngIf="!isComponentReadonly" fill="clear" size="small" color="danger" class="ion-no-margin"
@@ -46,7 +49,7 @@
     <div class="ion-margin-top" *ngIf="selectedSegment === 'properties'">
       <ion-list>
         <ion-item>
-          <ion-input label="Name:" formControlName="name"></ion-input>
+          <ion-input label="Name:" formControlName="name" [readonly]="isComponentReadonly"></ion-input>
         </ion-item>
 
         <ion-item>
@@ -59,11 +62,12 @@
 
         <!--    todo: popover lehetne mi az a text limit-->
         <ion-item>
-          <ion-input label="Text limit:" formControlName="textLimit"></ion-input>
+          <ion-input label="Text limit:" formControlName="textLimit" [readonly]="isComponentReadonly"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-textarea label="Description:" formControlName="description" [autoGrow]="true"></ion-textarea>
+          <ion-textarea label="Description:" formControlName="description" [autoGrow]="true"
+                        [readonly]="isComponentReadonly"></ion-textarea>
         </ion-item>
 
         <ion-item>
@@ -78,7 +82,5 @@
 
       </ion-list>
     </div>
-
-    <ion-button (click)="log()">LOG</ion-button>
   </ion-content>
 </ng-container>
