--- a/src/app/components/dictionary/dictionary/dictionary.component.html
+++ b/src/app/components/dictionary/dictionary/dictionary.component.html
@@ -13,40 +13,59 @@
   <ion-content class="ion-padding">
 
     <ion-segment value="default" (ionChange)="segmentChanged($event)">
-      <ion-segment-button value="words">
+      <ion-segment-button value="texts">
         <ion-label>Words</ion-label>
       </ion-segment-button>
       <ion-segment-button value="properties">
         <ion-label>Properties</ion-label>
       </ion-segment-button>
     </ion-segment>
-    sortolható asc,desc és kereshető (searchbar) popover vagy actionsheet 4 lehetőséggel
-
-    <div class="ion-margin-top" *ngIf="selectedSegment === 'words'">
+    <div class="ion-margin-top" *ngIf="selectedSegment === 'texts'">
       <ion-list>
 
         <ion-item>
-          <ion-searchbar></ion-searchbar>
-          <ion-button fill="clear" size="small" color="primary" class="ion-no-margin">
+          <ion-searchbar [formControl]="typeaheadControl"></ion-searchbar>
+          <ion-button fill="clear" size="small" color="primary" class="ion-no-margin" (click)="sortTextSheet()">
             <ion-icon slot="icon-only" name="swap-vertical-outline"></ion-icon>
           </ion-button>
         </ion-item>
 
-        <ng-container formArrayName="texts">
-          <ion-item class="ion-no-padding" [formArrayName]="i"
-                    *ngFor="let word of form.controls.texts.controls; index as i">
-            <ion-textarea formControlName="translatedText" [autoGrow]="true"
-                          class="ion-margin ion-text-wrap ion-no-padding"
-                          [readonly]="isComponentReadonly"
-                          [value]="word.controls?.['translatedText']?.value"/>
-            <ion-textarea formControlName="originalText" [autoGrow]="true"
-                          class="ion-margin ion-text-wrap ion-no-padding"
-                          [readonly]="isComponentReadonly"
-                          [value]="word.controls?.['originalText']?.value"/>
-            <ion-button *ngIf="!isComponentReadonly" fill="clear" size="small" color="danger" class="ion-no-margin"
-                        (click)="confirmTextDelete(i)">
-              <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-            </ion-button>
+        <!--        <ng-container formArrayName="texts">-->
+        <!--          <ion-item class="ion-no-padding" [formArrayName]="i"-->
+        <!--                    *ngFor="let text of form.controls.texts.controls; index as i">-->
+        <!--            <ion-textarea formControlName="translatedText" [autoGrow]="true"-->
+        <!--                          class="ion-margin ion-text-wrap ion-no-padding"-->
+        <!--                          [readonly]="isComponentReadonly"-->
+        <!--                          [value]="text.controls?.['translatedText']?.value"/>-->
+        <!--            <ion-textarea formControlName="originalText" [autoGrow]="true"-->
+        <!--                          class="ion-margin ion-text-wrap ion-no-padding"-->
+        <!--                          [readonly]="isComponentReadonly"-->
+        <!--                          [value]="text.controls?.['originalText']?.value"/>-->
+        <!--            <ion-button *ngIf="!isComponentReadonly" fill="clear" size="small" color="danger" class="ion-no-margin"-->
+        <!--                        (click)="confirmTextDelete(i)">-->
+        <!--              <ion-icon slot="icon-only" name="trash-outline"></ion-icon>-->
+        <!--            </ion-button>-->
+        <!--          </ion-item>-->
+        <!--        </ng-container>-->
+
+        <ng-container>
+          <ion-item class="ion-no-padding"
+                    *ngFor="let text of (textsForm | async); index as i">
+            <ng-container [formGroup]="text">
+              <ion-textarea formControlName="translatedText" [autoGrow]="true"
+                            class="ion-margin ion-text-wrap ion-no-padding"
+                            [readonly]="isComponentReadonly"
+                            [value]="text.controls?.['translatedText']?.value"/>
+              <ion-textarea formControlName="originalText" [autoGrow]="true"
+                            class="ion-margin ion-text-wrap ion-no-padding"
+                            [readonly]="isComponentReadonly"
+                            [value]="text.controls?.['originalText']?.value"/>
+              <ion-button *ngIf="!isComponentReadonly" fill="clear" size="small" color="danger" class="ion-no-margin"
+                          (click)="confirmTextDeleteSheet(i)">
+                <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+              </ion-button>
+            </ng-container>
+
           </ion-item>
         </ng-container>
 
@@ -90,4 +109,7 @@
       </ion-list>
     </div>
   </ion-content>
+  <ion-button (click)="log()">
+    LOG
+  </ion-button>
 </ng-container>
