--- a/src/app/page/translate/translate-page.component.scss
+++ b/src/app/page/translate/translate-page.component.scss
@@ -1,3 +1,12 @@
 .last-text {
   border-radius: 1rem;
 }
+
+.dictionary {
+  background: rgba(var(--ion-text-color-rgb, 0, 0, 0), 0.07);
+  border-radius: 10px;
+}
+
+.translate {
+  border-radius: 10px !important;
+}
